--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EthicalChoice App</title>
+    <script defer src="/public/searchBar.js"></script>
 </head>
 <body>
+    <div class="container">
+        <div class="search">
+             <input type="search" id= "searchBar"class="searchTerm">
+        </div>
+        
+        <ul id="productsList"></ul>
     
+    </div>
+
 </body>
 </html>
